--- a/AppDica/MyMainApp/MasterInicio.Master
+++ b/AppDica/MyMainApp/MasterInicio.Master
@@ -168,7 +168,7 @@
                                 
                                 <li class="dropdown">
                                     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                        <%= _DataSistema.NombreUsuario%><span class="caret"></span>
+                                      <label>  <%= _DataSistema.NombreUsuario%></label><span class="caret"></span>
                                     </a>
                                     <ul class="dropdown-menu multi-level" role="menu">
                                         <li><a href="<%= Page.ResolveUrl("~/Logout.aspx")%>">Cerrar Sesión</a></li>
