--- a/AppDica/MyMainApp/EMP/RptEmpresa.rdlc
+++ b/AppDica/MyMainApp/EMP/RptEmpresa.rdlc
@@ -47,7 +47,7 @@
           </TablixColumns>
           <TablixRows>
             <TablixRow>
-              <Height>9.69667cm</Height>
+              <Height>9.59965cm</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -105,7 +105,7 @@
                           <Top>0.66146cm</Top>
                           <Left>4.05982cm</Left>
                           <Height>0.6cm</Height>
-                          <Width>3.4525cm</Width>
+                          <Width>4.32563cm</Width>
                           <ZIndex>1</ZIndex>
                           <Style>
                             <Border>
@@ -170,7 +170,7 @@
                           <Top>7.64618cm</Top>
                           <Left>4.00105cm</Left>
                           <Height>0.6cm</Height>
-                          <Width>2.5cm</Width>
+                          <Width>4.3844cm</Width>
                           <ZIndex>3</ZIndex>
                           <Style>
                             <Border>
@@ -235,7 +235,7 @@
                           <Top>2.59292cm</Top>
                           <Left>4.05982cm</Left>
                           <Height>0.6cm</Height>
-                          <Width>3.34667cm</Width>
+                          <Width>4.32563cm</Width>
                           <ZIndex>5</ZIndex>
                           <Style>
                             <Border>
@@ -300,7 +300,7 @@
                           <Top>2.59292cm</Top>
                           <Left>10.8377cm</Left>
                           <Height>0.6cm</Height>
-                          <Width>2.5cm</Width>
+                          <Width>3.84938cm</Width>
                           <ZIndex>7</ZIndex>
                           <Style>
                             <Border>
@@ -365,7 +365,7 @@
                           <Top>3.57188cm</Top>
                           <Left>4.05982cm</Left>
                           <Height>0.6cm</Height>
-                          <Width>2.5cm</Width>
+                          <Width>4.32563cm</Width>
                           <ZIndex>9</ZIndex>
                           <Style>
                             <Border>
@@ -430,7 +430,7 @@
                           <Top>3.57188cm</Top>
                           <Left>10.8377cm</Left>
                           <Height>0.6cm</Height>
-                          <Width>2.5cm</Width>
+                          <Width>3.84938cm</Width>
                           <ZIndex>11</ZIndex>
                           <Style>
                             <Border>
@@ -495,7 +495,7 @@
                           <Top>0.66146cm</Top>
                           <Left>10.8377cm</Left>
                           <Height>0.6cm</Height>
-                          <Width>2.5cm</Width>
+                          <Width>3.84938cm</Width>
                           <ZIndex>13</ZIndex>
                           <Style>
                             <Border>
@@ -560,7 +560,7 @@
                           <Top>1.61396cm</Top>
                           <Left>4.05982cm</Left>
                           <Height>0.6cm</Height>
-                          <Width>2.5cm</Width>
+                          <Width>4.32563cm</Width>
                           <ZIndex>15</ZIndex>
                           <Style>
                             <Border>
@@ -655,9 +655,9 @@
                           </Paragraphs>
                           <rd:DefaultName>DS_EMAIL_CONTACTO</rd:DefaultName>
                           <Top>7.64618cm</Top>
-                          <Left>10.8377cm</Left>
+                          <Left>10.87299cm</Left>
                           <Height>0.6cm</Height>
-                          <Width>2.5cm</Width>
+                          <Width>3.81409cm</Width>
                           <ZIndex>18</ZIndex>
                           <Style>
                             <Border>
@@ -722,7 +722,7 @@
                           <Top>8.67833cm</Top>
                           <Left>4.00105cm</Left>
                           <Height>0.6cm</Height>
-                          <Width>2.5cm</Width>
+                          <Width>4.3844cm</Width>
                           <ZIndex>20</ZIndex>
                           <Style>
                             <Border>
@@ -787,7 +787,7 @@
                           <Top>4.54833cm</Top>
                           <Left>4.05982cm</Left>
                           <Height>0.6cm</Height>
-                          <Width>2.5cm</Width>
+                          <Width>4.32563cm</Width>
                           <ZIndex>22</ZIndex>
                           <Style>
                             <Border>
@@ -852,7 +852,7 @@
                           <Top>4.54833cm</Top>
                           <Left>10.8377cm</Left>
                           <Height>0.6cm</Height>
-                          <Width>2.5cm</Width>
+                          <Width>3.84938cm</Width>
                           <ZIndex>24</ZIndex>
                           <Style>
                             <Border>
@@ -937,7 +937,6 @@
                         </Border>
                       </Style>
                     </Rectangle>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
               </TablixCells>
@@ -959,7 +958,7 @@
         <DataSetName>TB_EMPRESA</DataSetName>
         <Top>2.08703cm</Top>
         <Left>0.76961cm</Left>
-        <Height>9.69667cm</Height>
+        <Height>9.59965cm</Height>
         <Width>15.30034cm</Width>
         <ZIndex>1</ZIndex>
         <Style>
@@ -968,8 +967,173 @@
           </Border>
         </Style>
       </Tablix>
+      <Textbox Name="Textbox5">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>PASANTIAS</Value>
+                <Style>
+                  <FontSize>14pt</FontSize>
+                  <FontWeight>Bold</FontWeight>
+                  <Color>White</Color>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Center</TextAlign>
+            </Style>
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox3</rd:DefaultName>
+        <Top>12.11856cm</Top>
+        <Left>0.48591cm</Left>
+        <Height>0.70583cm</Height>
+        <Width>14.97078cm</Width>
+        <ZIndex>2</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <BackgroundColor>CornflowerBlue</BackgroundColor>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Rectangle Name="Rectangle1">
+        <ReportItems>
+          <Tablix Name="Tablix2">
+            <TablixBody>
+              <TablixColumns>
+                <TablixColumn>
+                  <Width>7.86519cm</Width>
+                </TablixColumn>
+              </TablixColumns>
+              <TablixRows>
+                <TablixRow>
+                  <Height>0.6cm</Height>
+                  <TablixCells>
+                    <TablixCell>
+                      <CellContents>
+                        <Textbox Name="Textbox11">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value>Pasantia</Value>
+                                  <Style>
+                                    <FontSize>8pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
+                                  </Style>
+                                </TextRun>
+                              </TextRuns>
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>Textbox11</rd:DefaultName>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                              <Style>Solid</Style>
+                            </Border>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                  </TablixCells>
+                </TablixRow>
+                <TablixRow>
+                  <Height>0.6cm</Height>
+                  <TablixCells>
+                    <TablixCell>
+                      <CellContents>
+                        <Textbox Name="DS_PASANTIA">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value>=Fields!DS_PASANTIA.Value</Value>
+                                  <Style>
+                                    <FontSize>8pt</FontSize>
+                                  </Style>
+                                </TextRun>
+                              </TextRuns>
+                              <Style />
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>DS_PASANTIA</rd:DefaultName>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                              <Style>Solid</Style>
+                            </Border>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                  </TablixCells>
+                </TablixRow>
+              </TablixRows>
+            </TablixBody>
+            <TablixColumnHierarchy>
+              <TablixMembers>
+                <TablixMember />
+              </TablixMembers>
+            </TablixColumnHierarchy>
+            <TablixRowHierarchy>
+              <TablixMembers>
+                <TablixMember>
+                  <KeepWithGroup>After</KeepWithGroup>
+                </TablixMember>
+                <TablixMember>
+                  <Group Name="Detalles1" />
+                </TablixMember>
+              </TablixMembers>
+            </TablixRowHierarchy>
+            <DataSetName>TB_PASANTIA</DataSetName>
+            <Top>0.66146cm</Top>
+            <Left>1.47617cm</Left>
+            <Height>1.2cm</Height>
+            <Width>7.86519cm</Width>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+            </Style>
+          </Tablix>
+        </ReportItems>
+        <KeepTogether>true</KeepTogether>
+        <Top>13.17308cm</Top>
+        <Left>0.76961cm</Left>
+        <Height>3.32021cm</Height>
+        <Width>15.30034cm</Width>
+        <ZIndex>3</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+        </Style>
+      </Rectangle>
     </ReportItems>
-    <Height>4.7955in</Height>
+    <Height>6.61842in</Height>
     <Style />
   </Body>
   <Width>6.5in</Width>
@@ -1228,6 +1392,100 @@
         <rd:TableName>TB_EMPRESADataTable</rd:TableName>
         <rd:ObjectDataSourceSelectMethod>Clone</rd:ObjectDataSourceSelectMethod>
         <rd:ObjectDataSourceType>ClsDataSets.DS_TB_EMP+TB_EMPRESADataTable, ClsDataSets, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
+      </rd:DataSetInfo>
+    </DataSet>
+    <DataSet Name="TB_PASANTIA">
+      <Query>
+        <DataSourceName>ClsDataSets</DataSourceName>
+        <CommandText>/* Local Query */</CommandText>
+      </Query>
+      <Fields>
+        <Field Name="ID">
+          <DataField>ID</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="DS_NOMBRE_EVAL">
+          <DataField>DS_NOMBRE_EVAL</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="DS_EMAIL_CONTACTO">
+          <DataField>DS_EMAIL_CONTACTO</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="DS_EMPRESA">
+          <DataField>DS_EMPRESA</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="DS_AREA">
+          <DataField>DS_AREA</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="DS_PASANTIA">
+          <DataField>DS_PASANTIA</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="FECH_INICIO_PASANTIA">
+          <DataField>FECH_INICIO_PASANTIA</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="DS_DURACION">
+          <DataField>DS_DURACION</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="DS_HORARIO_DE">
+          <DataField>DS_HORARIO_DE</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="DS_HORARIO_A">
+          <DataField>DS_HORARIO_A</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="CD_ESTADO_PASANTIA">
+          <DataField>CD_ESTADO_PASANTIA</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="NM_DIAS_DE">
+          <DataField>NM_DIAS_DE</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="NM_DIAS_A">
+          <DataField>NM_DIAS_A</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="NM_EDAD_DE">
+          <DataField>NM_EDAD_DE</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="NM_EDAD_A">
+          <DataField>NM_EDAD_A</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="NM_VACANTES">
+          <DataField>NM_VACANTES</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="DS_ESCOLARIDAD">
+          <DataField>DS_ESCOLARIDAD</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="DS_OPCION_ACADEMICA">
+          <DataField>DS_OPCION_ACADEMICA</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="DS_DIRECCION_PASANTIA">
+          <DataField>DS_DIRECCION_PASANTIA</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="NOMBRE_PASANTIA">
+          <DataField>NOMBRE_PASANTIA</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+      </Fields>
+      <rd:DataSetInfo>
+        <rd:DataSetName>ClsDataSets</rd:DataSetName>
+        <rd:TableName>TB_PASANTIADataTable</rd:TableName>
+        <rd:ObjectDataSourceSelectMethod>Clone</rd:ObjectDataSourceSelectMethod>
+        <rd:ObjectDataSourceType>ClsDataSets.DS_TB_EMP+TB_PASANTIADataTable, ClsDataSets, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
